# UGAHacksX

./: .env  README.md  UGAHacks Project Log.docx  app.py  atlas_client.py  band_member.py  band_team.py  embeddings.py  generate_data.py  hybrid_search.txt  index.html  load_data.py  models.py  music.py  openai_client.py  package-lock.json  package.json  pyproject.toml  python_splitter.py  rag.py  recursive_splitter.py  rock.py  semantic_splitter.py  test.py  vector_search.py
back-end/: .env  app.py  atlas_client.py  generate_data.py  models.py  openai_client.py  rock.py  test.json
back-end/templates/: about.html  artist-recs.html  artist-register.html  artist_about.html  band-recs.html  band-register.html  band_about.html  band_profile.html  index.html  login.html
css/: styles.css
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
generation/: adjectives.json  artist_bios.json  band_bios.json  band_members.json  bands.json  first_names.json  goals.json  last_names.json  nouns.json
landingpage/: about.html  index.html
landingpage/css/: styles.css
sound sync web/: Artist_Profile.html  about.html  artist-recs.html  artist-register.html  band-recs.html  band-register.html  band_profile.html  index.html  login.html  music3.html
sound sync web/css/: styles.css
sound sync web/js/: scripts.js
src/: App.js  index.css  index.js  reportWebVitals.js
templates/: Artist_Profile.html  about.html  artist-recs.html  artist-register.html  artist_about.html  band-recs.html  band-register.html  band_about.html  band_profile.html  index.html  login.html
(+10 files in other folders)
